<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LayoutContentMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#696969"
    android:orientation="vertical">

    <EditText
        android:id="@+id/editnome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/nome"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editcategoria"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/categoria"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editdescricao"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/descricao"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editquantidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/quantidade"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editunidade"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/unidade"
        android:inputType="textPersonName"
        android:autofillHints="" />

    <EditText
        android:id="@+id/editvalor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/valor"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/editfornecedor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/fornecedor"
        android:inputType="textPersonName"
        android:importantForAutofill="no" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

    </LinearLayout>

</LinearLayout>
