<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0000"
    android:gravity="center"
    android:visibility="visible"
    tools:layout_editor_absoluteY="81dp"
    tools:style="@style/AppTheme">

    <Button
        android:id="@+id/CadProd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/cadastrar_produto"
        app:layout_constraintBottom_toTopOf="@+id/ModProd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/ListProd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/listar_produtos"
        app:layout_constraintBottom_toTopOf="@+id/ExcProd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ModProd"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/ModProd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/modificar_produto"
        app:layout_constraintBottom_toTopOf="@+id/ListProd"
        app:layout_constraintTop_toBottomOf="@+id/CadProd"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="110dp" />

    <Button
        android:id="@+id/ExcProd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/excluir_produto"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ListProd"
        tools:ignore="MissingConstraints" />

    <Button
        android:id="@+id/Perf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:text="@string/perfil"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ExcProd"
        tools:ignore="MissingConstraints" />

</android.support.constraint.ConstraintLayout>